--- a/pipeline/deployspec.yml
+++ b/pipeline/deployspec.yml
@@ -24,10 +24,10 @@ phases:
 
   build:
     commands:
-      #- cd $CODEBUILD_SRC_DIR/terraform-infrastructure/shared_services/mint-token-ws/staging
-      #- terraform init -no-color
-      #- terraform apply -no-color -auto-approve -var container_tag=$latest_build
-      #- sh $CODEBUILD_SRC_DIR/pipeline/wait_for_version.sh $TC_ENDPOINT $latest_build 300
+      - cd $CODEBUILD_SRC_DIR/terraform-infrastructure/libra.lib.virginia.edu/ecs-tasks/staging/libra-easystore
+      - terraform init -no-color
+      - terraform apply -no-color -auto-approve -var container_tag=$latest_build
+      - sh $CODEBUILD_SRC_DIR/pipeline/wait_for_version.sh $TC_ENDPOINT $latest_build 300
 
 #  post_build:
 #    commands:
